@@ -28,6 +28,7 @@
             Now save file modification time with FAT
             Fix segfault if `.clone` is called with `this==undefined` (fix #1628)
             Fix issue outputting char codes <8 after outputting hex char codes
+            nRF52: Don't allow NRF.updateServices while a BLE restart for setServices is queued
 
      2v01 : ESP32: update to esp-idf V3.1
             Fix issues with Class Extends
